@@ -649,7 +649,6 @@ void fix_stopped_item(object *op, mapstruct *map, object *originator);
 object *fix_stopped_arrow(object *op);
 int free_no_drop(object *op);
 void move_teleporter(object *op);
-void move_player_changer(object *op);
 void move_firewall(object *op);
 void move_player_mover(object *op);
 void move_duplicator(object *op);
