@@ -14,6 +14,15 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Extract player_changer to its own file.
+ include/sproto.h typesproto.h
+ server/ob_types.c time.c
+ types/legacy/process.c
+ types/Makefile.am
+Added file:
+ types/player_changer/player_changer.c
+Nicolas Weeger 2008-03-29
+
 Remove obsolete code, tweak comment.
  server/time.c
 Nicolas Weeger 2008-03-29
